# Chrolispp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Chrolispp.sln  README.md
.github/workflows/: build_solution.yml  cmake-build.yml
Arduino/arduino_chroliscpp_v200_firmware/: arduino_chroliscpp_v200_firmware.ino
Arduino/arduino_code_analog/: arduino_code_analog.ino
Arduino/arduino_code_comcpp/: arduino_code_comcpp.ino
Arduino/arduino_code_digital/: arduino_code_digital.ino
Arduino/arduino_code_pwm/: arduino_code_pwm.ino
Arduino/arduino_comcpp_mcp4725/: arduino_comcpp_mcp4725.ino
Arduino/arduino_comcpp_with_mcp4725/: arduino_comcpp_with_mcp4725.ino
Chrolispp/: CMakeLists.txt  Chrolispp.cpp  Chrolispp.vcxproj  Chrolispp.vcxproj.filters  Chrolispp.vcxproj.template  CsvReader.cpp  CsvReader.hpp  LEDFunctions.cpp  LEDFunctions.hpp  Logger.hpp  ProtocolStep.cpp  ProtocolStep.hpp  Utils.cpp  version.hpp.in
Chrolispp/include/: ArduinoCommands.hpp  ArduinoResources.hpp  COMFunctions.hpp  DurationAndUnit.hpp  InitialBreakBatch.hpp  LEDFunctions.hpp  Logger.hpp  ProtocolBatch.hpp  ProtocolPlanner.hpp  ProtocolStep.hpp  PulseChainBatch.hpp  SinglePulsesBatch.hpp  Timing.hpp  Utils.hpp  constants.hpp
Chrolispp/src/: ArduinoCommands.cpp  COMFunctions.cpp  Chrolispp.cpp  InitialBreakBatch.cpp  LEDFunctions.cpp  Logger.cpp  ProtocolPlanner.cpp  ProtocolStep.cpp  PulseChainBatch.cpp  SinglePulsesBatch.cpp  Timing.cpp  Utils.cpp
